DB connection and quiz list API and question API

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,3 +2,11 @@ http {
   ip = "localhost"
   port = 5000
 }
+quizDatabase = {
+  singleton="true"
+  user = "postgres"
+  password = "Aiden@1202"
+  url = "jdbc:postgresql://localhost:5432/quiz"
+  connectionPool = "HikariCP"
+  connectionTimeout= 30000
+}
